PATCH: bugfix to make retrievable orders visible without logging in.

--- a/themes/ssu/css/ModulesByTopic.css
+++ b/themes/ssu/css/ModulesByTopic.css
@@ -60,6 +60,9 @@ a.change {
 .topic.opened li, .topic.opened li a {
     color: #525050!important;
 }
+li.changed {
+    background-color: yellow;
+}
 .pill:before {
     content: '{';
 }
